2009-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/basics_dbus_glib/Makefile.am:
	* docs/examples/basics_dbus_glib/main.c
	* docs/book/C/telepathy.xml: Basics: Add a little example of calling a 
	D-Bus method with dbus-glib.

	* docs/book/C/icons/:
	* docs/book/C/figures/: Added these directories to git. I forgot to do 
	that until now.

2009-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Add a small part of the introduction. 
	Add some sect structure.

2009-01-16  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/send_message/main.c: on_get_contacts_by_id(): Ref the 
	TpContact so we can use it later, avoiding the crash when calling 
	tp_contact_get_handle().

2009-01-12  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/send_message/main.c: Set the TargetHandleType too, 
	though this then crashes: 
	https://bugs.freedesktop.org/show_bug.cgi?id=19523
	(The previous mentioned error was fixed by upgrading telepathy-gabble.)

2008-01-05  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Do not null-terminated the array 
	given to tp_connection_get_contacts_by_handle() though I still get an 
	error about handle #2 having no contact-id.

2008-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/insert_example_code.pl: Base this on the gtkmm-documentation 
	one rather than the flumotion-doc one (but using .c, not .cc), to 
	read all files in a directory rather than individual files.
	* doc/book/Makefile.am: Call insert_example_code.pl with the correct 
	path.
	* doc/book/C/telepathy.xml: Add the examples at some vaguely 
	appropriate places, to check that this works.

2008-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Define a base URL entity and use ulink to 
	link to types, interfaces and methods in the Telepathy specification.

2008-12-22  Murray Cumming  <murrayc@murrayc.com>
